# ff-case

./: README.md  pyproject.toml  task-1.ipynb  task-2.ipynb
presentations/: task1.pptx  task2.pptx
src/: f.py  ts.py
