[tool.poetry]
name = "freedom_case"
version = "0.1.0"
description = ""
authors = ["Andrey Babkin <andrey.babkin.ru71@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
